Added Authors section

--- a/hack-express/public/stylesheets/style.css
+++ b/hack-express/public/stylesheets/style.css
@@ -14,6 +14,10 @@
  *   limitations under the License.
  */
 
+/*
+ *Authors:  Robert Dunigan
+ */
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
