--- a/hack-express/views/Login.jade
+++ b/hack-express/views/Login.jade
@@ -14,6 +14,10 @@
 //-   limitations under the License.
 //-
 
+//-
+//-   Authors:  Robert Dunigan
+//-
+
 !!! 5
 html
     head
@@ -31,4 +35,3 @@ html
         button#submit(type='submit', form='loginForm', name='loginSubmit', value='Submit', tabindex='3') Login
         br
         a#reg(href='/Registration') Register
-        
