--- a/hack-express/views/Registration.jade
+++ b/hack-express/views/Registration.jade
@@ -12,6 +12,11 @@
 //-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 //-   See the License for the specific language governing permissions and
 //-   limitations under the License.
+//-
+
+//-
+//-   Authors:  Robert Dunigan
+//-
 
 !!! 5
 html
@@ -28,4 +33,3 @@ html
             label(for='password') Password:
             input#password(type='password', name='password', tabindex='2', required='true/')
         button#submit(type='submit', form='registrationForm', name='registrationSubmit', value='Submit', tabindex='3') Register
-        
