--- a/hack-express/public/stylesheets/tabs.css
+++ b/hack-express/public/stylesheets/tabs.css
@@ -14,6 +14,10 @@
  *   limitations under the License.
  */
 
+/*
+ *Authors:  Robert Dunigan
+ */
+
 @font-face {
     font-family: "Starjedi2";
     src: url("/images/Starjhol.eot?#iefix") format("embedded-opentype"),
