extracted head information from jade files and created a separate/central include head file.

--- a/hack-express/views/Hints.jade
+++ b/hack-express/views/Hints.jade
@@ -17,10 +17,9 @@
 
 !!! 5
 html
-  head
-    title Hack Warz:  Hints
-    link(rel='stylesheet', type='text/css', href='/stylesheets/hackWarz.css')
-    link(rel='stylesheet', type='text/css', href='/stylesheets/tabs.css')
+  
+  include includes/head
+  
   body(onload='initHints();')
     h2 Hints
     div#wrapper
