--- a/hack-express/views/Logout.jade
+++ b/hack-express/views/Logout.jade
@@ -20,10 +20,9 @@
 
 !!! 5
 html
-    head
-        title Hack Warz:  Logout
-        link(rel='stylesheet', type='text/css', href='/stylesheets/hackWarz.css')
-        link(rel='stylesheet', type='text/css', href='/stylesheets/tabs.css')
+    
+    include includes/head
+    
     body
         h2 Logout
         h3 You have logged out...
