--- a/hack-express/views/Main.jade
+++ b/hack-express/views/Main.jade
@@ -20,10 +20,9 @@
 
 !!! 5
 html
-    head
-        title Hack Warz:  Main
-        link(rel='stylesheet', type='text/css', href='/stylesheets/hackWarz.css')
-        link(rel='stylesheet', type='text/css', href='/stylesheets/tabs.css')
+
+    include includes/head
+        
     body.mainBody
         nav
             a(href='/Scoreboard', target='CurrentPage') Scoreboard  
