--- a/hack-express/views/Notes.jade
+++ b/hack-express/views/Notes.jade
@@ -20,10 +20,9 @@
 
 !!! 5
 html
-  head
-    title Hack Warz:  Notes
-    link(rel='stylesheet', type='text/css', href='/stylesheets/hackWarz.css')
-    link(rel='stylesheet', type='text/css', href='/stylesheets/tabs.css')
+
+  include includes/head
+    
   body(onload='initTokens();')
     h2 Notes
     div#wrapper
