--- a/hack-express/views/Scoreboard - Dummy.jade
+++ b/hack-express/views/Scoreboard - Dummy.jade
@@ -20,10 +20,9 @@
 
 !!! 5
 html
-  head
-    title Hack Warz:  Scoreboard
-    link(rel='stylesheet', type='text/css', href='/stylesheets/hackWarz.css')
-    link(rel='stylesheet', type='text/css', href='/stylesheets/tabs.css')
+  
+  include includes/head
+  
   body(onload='initScoreboard();')
     h2 Scoreboard
     table#scoreTable.token(name='scoreTable')
