--- a/hack-express/views/Submissions.jade
+++ b/hack-express/views/Submissions.jade
@@ -20,10 +20,9 @@
 
 !!! 5
 html
-  head
-    title Hack Warz:  Submissions
-    link(rel='stylesheet', type='text/css', href='/stylesheets/hackWarz.css')
-    link(rel='stylesheet', type='text/css', href='/stylesheets/tabs.css')
+  
+  include includes/head
+  
   body(onload='initTokens();')
     h2 Submissions
     form#tokenInfo(method='post', action='/submissions/submit')
