--- a/hack-express/views/layout.jade
+++ b/hack-express/views/layout.jade
@@ -20,8 +20,6 @@
 
 doctype 5
 html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+  include includes/head
   body
     block content
