--- a/hack-express/views/Main.jade
+++ b/hack-express/views/Main.jade
@@ -25,9 +25,8 @@ html
         
     body.mainBody
         nav
-            a(href='/Scoreboard', target='CurrentPage') Scoreboard  
-            a(href='/Hints', target='CurrentPage') Hints    
-            a(href='/Notes', target='CurrentPage') Notes    
-            a(href='/Submissions', target='CurrentPage') Submissions    
-            a(href='/Logout', target='CurrentPage') Logout  
-        iframe#CurrentPage(name='CurrentPage', src='/Scoreboard', seamless='seamless')
+            a(href='/Scoreboard') Scoreboard  
+            a(href='/Hints') Hints    
+            a(href='/Notes') Notes    
+            a(href='/Submissions') Submissions    
+            a(href='/Logout') Logout
