--- a/hack-express/views/includes/head.jade
+++ b/hack-express/views/includes/head.jade
@@ -24,5 +24,6 @@ head
     title Hack Warz
     
   link(rel='stylesheet', type='text/css', href='/stylesheets/hackWarz.css')
+  link(rel='stylesheet', type='text/css', href='/stylesheets/style.css')
   link(rel='stylesheet', type='text/css', href='/stylesheets/tabs.css')
 
