added design docs for users and tokens and fixed scoreboard and submissions page.  All items are tied to the users session.

--- a/hack-express/views/Scoreboard.jade
+++ b/hack-express/views/Scoreboard.jade
@@ -15,11 +15,23 @@
 //-
 
 //-
-//-   Authors:  Robert Dunigan
+//-   Authors:  Adam Brightwell, Robert Dunigan
 //-
 
 extends layout
 
 block content
   h2 Scoreboard
+  
+  div
+    table
+      thead
+        tr
+          th Username
+          th Points
+      tbody
+        each userScore in userScores
+          tr
+            td #{userScore.key}
+            td #{userScore.value}
     
