--- a/hack-express/views/layout.jade
+++ b/hack-express/views/layout.jade
@@ -26,15 +26,15 @@ html
       #header
         - if (typeof user !== 'undefined')
             #user= 'logged in as: ' + user.username
-            #logout
+            #logout 
               a(href='/logout') logout
   
-    - if (typeof messages !== 'undefined')  
+      - if (typeof messages !== 'undefined')  
         - if (typeof messages.info !== 'undefined')
           each message in messages.info
-            p#flash.info= message
-         - if (typeof messages.warn !== 'undefined')
-           each message in messages.warn
-             p#flash.warn= message
+            #flash.info= message
+        - if (typeof messages.warn !== 'undefined')
+          each message in messages.warn
+            #flash.warn= message
     
     block content
