modified logout.jade to utilize layout.jade

--- a/hack-express/views/Logout.jade
+++ b/hack-express/views/Logout.jade
@@ -18,11 +18,8 @@
 //-   Authors:  Robert Dunigan
 //-
 
-!!! 5
-html
-    
-    include includes/head
-    
-    body
-        h2 Logout
-        h3 You have logged out...
+extends layout
+
+block content
+  h2 Logout
+  h3 You have logged out...
