--- a/hack-express/views/includes/head.jade
+++ b/hack-express/views/includes/head.jade
@@ -18,12 +18,16 @@
 //-
 
 head
+  meta(name="viewport", content="width=device-width, initial-scale=1.0")
   - if (typeof title != 'undefined')
     title Hack Warz: #{title}
   - else
     title Hack Warz
-    
-  link(rel='stylesheet', type='text/css', href='/stylesheets/hackWarz.css')
+  
+  link(rel='stylesheet', type='text/css', href='/stylesheets/fonts.css')
+  link(rel='stylesheet', type='text/css', href='/stylesheets/bootstrap.min.css')
+  link(rel='stylesheet', type='text/css', href='/stylesheets/bootstrap-responsive.min.css')
+  //- link(rel='stylesheet', type='text/css', href='/stylesheets/hackWarz.css')
   link(rel='stylesheet', type='text/css', href='/stylesheets/style.css')
-  link(rel='stylesheet', type='text/css', href='/stylesheets/tabs.css')
+  //- link(rel='stylesheet', type='text/css', href='/stylesheets/tabs.css')
 
