Updates fix production env issues

--- a/hack-express/public/stylesheets/fonts.css
+++ b/hack-express/public/stylesheets/fonts.css
@@ -1,7 +1,7 @@
 
 @font-face {
     font-family: "Starjedi";
-    src: url("/images/Starjedi.ttf") format("truetype");
+    src: url("/images/starjedi.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 }
