--- a/hack-express/views/Scoreboard.jade
+++ b/hack-express/views/Scoreboard.jade
@@ -37,3 +37,9 @@ block content
           td #{userScore.key}
           td #{userScore.value}
   include includes/sponsors
+  
+  script(type='text/javascript')
+    function timedRefresh(timeoutPeriod) {
+      setTimeout("location.reload(true);",timeoutPeriod);
+    }
+    timedRefresh(#{refreshTime});
