--- a/hack-express/public/stylesheets/style.css
+++ b/hack-express/public/stylesheets/style.css
@@ -25,7 +25,12 @@ input[type="color"], .uneditable-input {
 	color: #c3ab55;
 	font-size: 16pt;
 }
-	
+
+.input-append .add-on, .input-prepend .add-on{
+	background-color: rgb(68,66,59);
+	text-shadow: 0px 1px 0px rgb(0, 0, 0);
+}
+
 .well {
 	background-color: #151610;
 	border: 2px solid #c3ab55;
