disabled the Notes and Hints links in the layout.

--- a/hack-express/views/layout.jade
+++ b/hack-express/views/layout.jade
@@ -36,10 +36,10 @@ html
                 a(href="/scoreboard") Scoreboard
               li
                 a(href="/submissions") Submissions
-              li
-                a(href="/notes") Notes
-              li
-                a(href="/hints") Hints
+              // li
+              //   Notes
+              // li
+              //   Hints
           - if (typeof user !== 'undefined')
             div
               form.navbar-form.form-inline.pull-right(action='/logout')
