Migrated data operations to Mongoose.

--- a/hack-express/views/Scoreboard.jade
+++ b/hack-express/views/Scoreboard.jade
@@ -37,6 +37,6 @@ block content
       tbody
       each userScore in userScores
         tr
-          td #{userScore.key}
-          td #{userScore.value}
+          td #{userScore.username}
+          td #{userScore.score}
   include includes/sponsors
