--- a/hack-express/views/Submissions.jade
+++ b/hack-express/views/Submissions.jade
@@ -42,7 +42,7 @@ block content
         tbody
           each token in tokens
             tr
-              td #{token.token_value}
+              td #{token.value}
               td #{token.description}
               td #{token.points}
   include includes/sponsors
