Refactored locals, fixed session box so it displays long usernames as truncated

--- a/hack-express/views/layout.jade
+++ b/hack-express/views/layout.jade
@@ -47,7 +47,7 @@ html
                 div.control-groups
                   div.controls
                     div.input-prepend.input-append
-                      span.add-on= 'Logged in as: ' + user.username
+                      span.add-on= 'Logged in as: ' + displayName
                       button.btn Logout
     div.container
       div.fluid-container
