--- a/hack-express/views/layout.jade
+++ b/hack-express/views/layout.jade
@@ -38,8 +38,8 @@ html
                 a(href="/submissions") Submissions
               // li
               //   Notes
-              // li
-              //   Hints
+              li
+                a(href="/hints") Hints
           - if (typeof user !== 'undefined')
             div
               form.navbar-form.form-inline.pull-right(action='/logout')
